--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://wmotti.github.io" # the base hostname & protocol for your site
 twitter_username: wmotti
 github_username:  wmotti
+timezone: Europe/Rome
 
 # Build settings
 markdown: kramdown
